Add null case to SwitchPatternMatchingSample